// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminStepFormModal /> renders correctly 1`] = `
<ProjectAdminFormstyle__StepModalContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ProjectAdminFormstyle__StepModalTitle
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="edit-custom-step"
        values={Object {}}
      />
    </ProjectAdminFormstyle__StepModalTitle>
  </ModalHeader>
  <Relay(Connect(injectIntl(ReduxForm)))
    formName="ProjectAdminStepForm"
    handleClose={[MockFunction]}
    project={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
    step={
      Object {
        "__typename": "OtherStep",
      }
    }
  />
</ProjectAdminFormstyle__StepModalContainer>
`;

exports[`<ProjectAdminStepFormModal /> renders correctly hided 1`] = `
<ProjectAdminFormstyle__StepModalContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[MockFunction]}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ProjectAdminFormstyle__StepModalTitle
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="edit-custom-step"
        values={Object {}}
      />
    </ProjectAdminFormstyle__StepModalTitle>
  </ModalHeader>
  <Relay(Connect(injectIntl(ReduxForm)))
    formName="ProjectAdminStepForm"
    handleClose={[MockFunction]}
    project={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
    step={
      Object {
        "__typename": "OtherStep",
      }
    }
  />
</ProjectAdminFormstyle__StepModalContainer>
`;

exports[`<ProjectAdminStepFormModal /> renders correctly with step 1`] = `
<ProjectAdminFormstyle__StepModalContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ProjectAdminFormstyle__StepModalTitle
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="edit-custom-step"
        values={Object {}}
      />
    </ProjectAdminFormstyle__StepModalTitle>
  </ModalHeader>
  <Relay(Connect(injectIntl(ReduxForm)))
    formName="ProjectAdminStepForm"
    handleClose={[MockFunction]}
    project={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
    step={
      Object {
        "__typename": "OtherStep",
        "title": "test",
      }
    }
  />
</ProjectAdminFormstyle__StepModalContainer>
`;
